--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "quill-image-resize-module": "^3.0.0",
     "react": "19.1.0",
     "react-apexcharts": "^1.4.1",
+    "react-bootstrap": "^2.10.10",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.53.0",
     "react-hot-toast": "^2.5.1",
