--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "jwt-decode": "^4.0.0",
     "moment": "^2.30.1",
     "next": "15.5.3",
+    "nuqs": "^2.6.0",
     "quill-image-resize-module": "^3.0.0",
     "react": "19.1.0",
     "react-apexcharts": "^1.4.1",
