--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
+    "@next/third-parties": "^15.5.3",
     "@react-oauth/google": "^0.12.2",
     "@tiptap/extension-image": "^2.4.0",
     "@tiptap/extension-link": "^2.4.0",
@@ -46,6 +47,7 @@
     "react-share": "^5.1.0",
     "react-spinners": "^0.14.1",
     "resend": "^3.4.0",
+    "sonner": "^2.0.7",
     "swiper": "^11.1.3",
     "uuid": "^10.0.0",
     "xlsx": "^0.18.5",
